Fix navbar overlapping contact form

--- a/Contact/index.css
+++ b/Contact/index.css
@@ -83,15 +83,10 @@ nav > div:nth-child(2) {
 	box-shadow: 0 0.9rem 1.7rem rgba(0, 0, 0, 0.25),
 		0 0.7rem 0.7rem rgba(0, 0, 0, 0.22);
 	position: relative;
-    margin: 2% 20%;
+    margin: 15vh 20vw;
     padding: 5% 2%;
 }
 
-
-img {
-    width: 100%;
-    height: 100%;
-}
 
 #BoxContent {
     height: 100%;
@@ -149,6 +144,14 @@ hr {
     border: 1px solid #3a5a40
 }
 
+.coaches_container {
+    height: 20vh;
+    display: flex;
+    justify-content: center;
+    margin-top: 8vh;
+    gap: 50px;
+}
+
 section p {
     text-align: left;
     font-size: 130%;
@@ -156,12 +159,15 @@ section p {
 
 h2 {
     font-size: 300%;
+    margin-top: 20px;
 }
 
-h2, #coaches {
-    margin-left: 20%;
+.coaches_section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
-
 
 
 footer {
